# Projects

./: README.md
AssigmentTracker/: README.md  assignmentTracker.py  assignments.txt
BinaryTrees/: README.md  binarytrees.pro
QuiqStiq/app/src/main/res/layout/: activity_game_selection.xml  activity_homepage.xml  activity_letter_selection.xml  activity_lily_pads.xml  layout_single_line.xml
QuiqStiq/app/src/main/res/values/: colors.xml
Sieve/: README.md  sieve.hs
TSP_GA/: GA_TSP.py  GA_TSP_Tester.py  README.md  TSP.py  matrix.txt  txtparser.py
httpServer/: CMakeLists.txt  a.out  main.c
pig/: README.md
pig/Artifacts/Project Checklist #3/: stringParseExample.java
pig/Artifacts/Project Checklist #3/Letter Selection/: MainActivity.java  activity_main.xml
pig/Artifacts/Project Checklist #3/Lillipad_Game/: MainActivity.java  activity_main.xml
pig/Artifacts/Project Checklist #3/Word Selection/: WordSelection.java  workspace.xml
pig/Artifacts/Project Checklist #4/Letter Selection/: MainActivity.java  activity_main.xml
pig/Artifacts/Project Checklist #5/: ProjectChecklist#5.md  Project_Checklist__5.docx  Restrospective.docx
pig/Artifacts/Project Checklist #6/: Project_Checklist__6.md
pig/Doc/: Design Document.md  GitProcess.md  SRS.md  UMLClassDiagramLink.md  verses.md
pig/QuiqStiq/app/: build.gradle
pig/QuiqStiq/app/src/main/: AndroidManifest.xml
pig/QuiqStiq/app/src/main/res/layout/: activity_line_selection.xml  activity_word_selection.xml
pig/QuiqStiq/app/src/main/res/values/: strings.xml
pig/Standups/: standup-11-4-18
(+15 files in other folders)
